Proyecto2/kubeless/consumer-losers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-losers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer-losers
  template:
    metadata:
      labels:
        app: consumer-losers
    spec:
      containers:
        - name: consumer-losers
          image: allangomez/consumer-loser:v0.5
