Proyecto2/kubeless/consumer-winners.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-winners
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer-winners
  template:
    metadata:
      labels:
        app: consumer-winners
    spec:
      containers:
        - name: consumer-winners
          image: allangomez/consumer-winner:v0.0
