Proyecto2/kubeless/server-swimming-grpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sever-swimming-grpc
  namespace: grpc-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sever-swimming-grpc
  template:
    metadata:
      labels:
        app: sever-swimming-grpc
    spec:
      containers:
        - name: server-swimming-grpc
          image: allangomez/server-swimming:v0.0  # Cambia por la imagen de Docker Hub
          ports:
            - containerPort: 50051
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: service-50051
  namespace: grpc-app
spec:
  selector:
    app: sever-swimming-grpc
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
