Proyecto2/kubeless/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-ingress
  namespace: grpc-app
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"  # Cambiado a GRPC
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /send_student_inge
            pathType: Prefix
            backend:
              service:
                name: service-3000
                port:
                  number: 3000
          - path: /send_student_agro
            pathType: Prefix
            backend:
              service:
                name: service-8080
                port:
                  number: 8080
